Fix some div overlapping

--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 5%;
-  padding-bottom: 5%;
   background: rgb(240, 240, 240);
 }
 
@@ -57,7 +55,8 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
   font-weight: bold;
-  padding-right: 40%;
+  padding-right: 38%;
+  padding-top: 4%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -67,8 +66,7 @@ legend {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
   font-weight: bold;
-  margin-top: 1.5%;
-  margin-bottom: 1.5%;
+  margin-top: 1em;
 }
 
 #sentence {
@@ -78,12 +76,17 @@ legend {
 #middle {
   background: white;
   box-shadow: 0px 3px 2px 2px rgb(0 0 0 / 15%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-bottom: 3em;
 }
 
 .row {
   display: flex;
   justify-content: space-between;
-  width: 40%;
+  width: 32em;
+  margin-top: 2em;
 }
 
 .labelinput {
@@ -102,10 +105,6 @@ legend {
   padding-left: 4%;
 }
 
-form {
-  border: none;
-}
-
 #credit {
   color: white;
   align-self: center;
@@ -115,4 +114,15 @@ form {
 
 a {
   color: white;
+}
+
+input {
+  height: 1.9em;
+  width: 145%;
+}
+
+input:focus {
+  outline: none;
+  border: lightskyblue solid 2px;
+  box-shadow: 2px 1px 5px 1px rgb(0 0 0 / 15%);
 }
